--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
   <app-grid-articoli></app-grid-articoli>
   <app-primo-piano [title]="'Le categorie più richieste'" [subTitle]="'Articoli di tendenza'"></app-primo-piano>
   <app-primo-piano [title]="'I prodotti che ami'" [subTitle]="'Inseriti tra i preferiti'"></app-primo-piano>
-  <app-primo-piano [title]="'Aquisti recenti'" [subTitle]="'Cosa stanno acquistando i nostri clienti'"></app-primo-piano>
+  <app-primo-piano [title]="'Acquisti recenti'" [subTitle]="'Cosa stanno acquistando i nostri clienti'"></app-primo-piano>
   <app-footer></app-footer>
  
   
