--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -9,7 +9,7 @@
      
         </ul>
 
-        <form class=" mb-lg-0 me-lg-3 col-6" role="search">
+        <form class=" mb-lg-0 me-lg-3  col-sm-3 col-xl-4" role="search">
             <div class="input-group ">
               <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Cerca..." aria-label="Search">
               <button class="btn btn-outline-light" type="submit" aria-label="Esegui ricerca">
