--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,11 +1,11 @@
-<div class="card m-2 w-100">
+<div class="card p-2 w-100">
     <img class="card-img-top " src="../../../assets/Images/output.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Nome Prodotto</h5>
       <p class="card-text">Descrizione</p>
       </div>
-      <div class="d-flex flex-wrap align-items-center justify-content-center m-4">
-        <a href="#" class="btn btn-primary mx-2">Aggiungi</a>
+      <div class="d-flex flex-wrap justify-content-center">
+        <a href="#" class="btn btn-primary mx-1">Aggiungi</a>
         <a href="#" class="btn btn-secondary ">Salva</a>
       </div>
       
