added registration page

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -36,7 +36,7 @@
                 </div>
             </button>
           <button type="button" class="btn btn-outline-light m-4">Registrati</button>
-          <button type="button" class="btn btn-warning">Accedi</button>
+          <button type="button" (click)="handleLogin()" class="btn btn-warning">Accedi</button>
         </div>
       </div>
 </header>
