--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,14 +7,6 @@
 
 </head>
 <body>
-  <app-header></app-header>
-  <app-jumbotron></app-jumbotron>
-  <app-grid-articoli></app-grid-articoli>
-  <app-primo-piano [title]="'Le categorie più richieste'" [subTitle]="'Articoli di tendenza'"></app-primo-piano>
-  <app-primo-piano [title]="'I prodotti che ami'" [subTitle]="'Inseriti tra i preferiti'"></app-primo-piano>
-  <app-primo-piano [title]="'Acquisti recenti'" [subTitle]="'Cosa stanno acquistando i nostri clienti'"></app-primo-piano>
-  <app-footer></app-footer>
- 
-  
+  <router-outlet></router-outlet>
 </body>
 </html>
