--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,13 +1,12 @@
 <div class="card p-2 w-100">
-    <img class="card-img-top " src="../../../assets/Images/output.jpg" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Nome Prodotto</h5>
-      <p class="card-text">Descrizione</p>
-      </div>
-      <div class="d-flex flex-wrap justify-content-center">
-        <a href="#" class="btn btn-primary mx-1">Aggiungi</a>
-        <a href="#" class="btn btn-secondary ">Salva</a>
-      </div>
-      
+  <img class="card-img-top" [src]="articolo.immagine" alt="{{ articolo.nome }}">
+  <div class="card-body">
+    <h5 class="card-title">{{ articolo.nome }}</h5>
+    <p class="card-text">{{ articolo.descrizione }}</p>
+    <h2 class="text-right">{{ articolo.prezzo | currency:'EUR' }}</h2>
   </div>
-  
+  <div class="d-flex flex-wrap justify-content-center">
+    <a href="#" class="btn btn-primary mx-1">Aggiungi</a>
+    <a href="#" class="btn btn-secondary">Salva</a>
+  </div>
+</div>
