--- a/src/app/core/grid-articoli/grid-articoli.component.html
+++ b/src/app/core/grid-articoli/grid-articoli.component.html
@@ -1,36 +1,12 @@
-<div id="carouselExample" class="carousel slide" data-ride="carousel" data-interval="5000">
+<div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
     <div class="carousel-inner">
-
-        <!-- Primo gruppo di card -->
-        <div class="carousel-item active">
-            <div class="row justify-content-center">               
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2"><app-card></app-card></div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2"><app-card></app-card></div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2"><app-card></app-card></div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2"><app-card></app-card></div>
-            </div>
+      <div *ngFor="let group of getGroupedArticles(); let first = first" class="carousel-item" [class.active]="first">
+        <div class="row justify-content-center">
+          <div *ngFor="let articolo of group" class="col-12 col-sm-6 col-md-4 col-lg-2">
+            <app-card [articolo]="articolo"></app-card>  <!-- Utilizza il componente card -->
+          </div>
         </div>
-
-        <!-- Secondo gruppo -->
-        <div class="carousel-item">
-            <div class="row justify-content-center">
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2"><app-card></app-card></div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2"><app-card></app-card></div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2"><app-card></app-card></div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2"><app-card></app-card></div>
-            </div>
-        </div>
-
-        <!-- Terzo gruppo -->
-        <div class="carousel-item">
-            <div class="row justify-content-center">
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2"><app-card></app-card></div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2"><app-card></app-card></div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2"><app-card></app-card></div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2"><app-card></app-card></div>
-            </div>
-        </div>
-
+      </div>
     </div>
 
     <!-- Controlli di navigazione -->
