--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -35,8 +35,9 @@
                   <a class="dropdown-item" href="#">Svuota carrello</a>
                 </div>
             </button>
-          <button type="button" class="btn btn-outline-light m-4">Registrati</button>
+          <button type="button" (click)="handleRegistration()" class="btn btn-outline-light m-4">Registrati</button>
           <button type="button" (click)="handleLogin()" class="btn btn-warning">Accedi</button>
+          <button type="button"  class="btn btn-primary m-4">Guest Account</button>
         </div>
       </div>
 </header>
