--- a/src/app/pages/registration/registration.component.html
+++ b/src/app/pages/registration/registration.component.html
@@ -1,1 +1,101 @@
-<p>registration works!</p>
+<div class="container d-flex flex-column align-items-center">
+    <img class="col-2 p-1" (click)="handleHome()" type="button" src="../../../assets/Images/logo.svg">
+    <h1>Crea il tuo account</h1>
+    <h4>E' semplice e veloce</h4>
+    
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="form-group w-75 rounded shadow-lg bg-light mb-5 p-5">
+        <!-- Nome e Cognome -->
+        <div class="d-flex w-100">
+            <!--Nome-->
+            <div class="d-flex flex-column w-100 align-items-center mr-2 ">
+                <input type="text" formControlName="nome" class="form-control p-4" placeholder="Nome" 
+                [appFormError]="'Il nome'"   [control]="registerForm.get('nome')" 
+                /> 
+            </div>
+               <!--Cognome-->
+               <div class="d-flex flex-column w-100 align-items-center">
+                <input type="text" formControlName="cognome" class="form-control p-4" placeholder="Cognome"  
+                [appFormError]="'Il cognome'" [control]="registerForm.get('cognome')" 
+                />
+                
+            </div>
+           
+        </div>
+
+        <!-- Data di nascita e Telefono -->
+        <div class="d-flex mt-2">
+            <div class="form-group ">
+                <small class="form-text text-muted ">Data di nascita</small>
+                <input class="form-control p-4" type="date" formControlName="dataNascita">
+            </div>
+            <input type="tel" formControlName="prefisso" class="form-control mx-2 mt-4 p-4 w-25" placeholder="Prefisso">
+            <input type="tel" formControlName="telefono" class="form-control mt-4 w-100 p-4" placeholder="Numero di telefono">
+        </div>
+
+        <!-- Indirizzo -->
+        <div class="d-flex ">
+            <input type="text" formControlName="via" class="form-control mr-2 w-25 p-4" placeholder="Via/Piazza">
+            <input type="text" formControlName="indirizzo" class="form-control mr-2 p-4" placeholder="Indirizzo">
+            <input type="text" formControlName="numeroCivico" class="form-control w-25 mr-2 p-4" placeholder="N.Civico">
+            <input type="text" formControlName="cap" class="form-control w-25  p-4" placeholder="CAP">
+        </div>
+
+        <!-- Email e Password -->
+        <div class="d-flex flex-column">
+            
+            <!---email-->
+            <div class="d-flex flex-row mt-2 w-100">
+                <div class="mr-4 w-50">
+                    <small class="text-muted">E-mail*</small>
+                    <input type="email" formControlName="email" class="form-control p-4 ">
+                </div>
+                <div class="w-50">
+                    <small class="text-muted">Conferma indirizzo E-mail*</small>
+                    <input type="email" formControlName="confermaEmail" class="form-control p-4">
+                </div>
+            </div>
+             <!---password-->
+             <div class="d-flex flex-row mt-2 w-100">
+                <div class="mr-4 w-50">
+                    <small class="text-muted">Password*</small>
+                    <input type="password" formControlName="password" class="form-control p-4 ">
+                </div>
+                <div class="w-50">
+                    <small class="text-muted">Conferma Password*</small>
+                    <input type="password" formControlName="confermaPassword" class="form-control p-4">
+                </div>
+            </div>
+        </div>
+
+        <!-- NewsLetter -->
+        <div class="form-check m-3">
+            <input class="form-check-input" type="checkbox" formControlName="accettaInformativa" required>
+            <label class="form-check-label">Iscrivimi alla Newsletter</label>
+            <small class="form-text text-muted font-italic">Puoi disdire in qualsiasi momento, visita la pagina assistenza</small>
+        </div>
+
+        <!-- Termini e Condizioni -->
+        <div class="form-check m-3">
+            <input class="form-check-input" type="checkbox" formControlName="accettaInformativa" required>
+            <label class="form-check-label">Ho letto l'informativa</label>
+            <small class="form-text text-muted font-italic">Proseguendo con la registrazione, accetti i Termini e condizioni di servizio.</small>
+        </div>
+
+        <!-- Pulsanti -->
+        <div class="d-flex p-2 justify-content-center">
+            <button type="submit" class="btn btn-success w-25 mx-4" [disabled]="registerForm.invalid">Registrati</button>
+            <button type="reset" class="btn btn-light w-25">Annulla</button>
+   
+        </div>
+        <div class="d-flex flex-column text-center ">
+            <div class="dropdown-divider"></div>
+            <h5 class="form-text text-muted">
+                Hai già un account? 
+                <span type="button" class="font-italic text-primary" (click)="handleLogin()">Accedi</span>
+            </h5>
+        </div>
+    
+    
+    </form>
+</div>
+<app-footer class="sticky-bottom"></app-footer>
