--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start bg-dark">
-        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+        <a href="" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
             <img src="../../../assets/Images/logo.svg" width="80" height="80" class="d-inline-block align-center p-2" alt="">
         </a>
 
