--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start bg-dark">
         <a href="" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-            <img src="../../../assets/Images/logo.svg" width="80" height="80" class="d-inline-block align-center p-2" alt="">
+            <img src="assets/Images/logo.svg" width="80" height="80" class="d-inline-block align-center p-2" alt="">
         </a>
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
