--- a/src/app/pages/login-form/login-form.component.html
+++ b/src/app/pages/login-form/login-form.component.html
@@ -3,7 +3,7 @@
 
   <div class=" d-flex align-items-center flex-column w-50 ">
     <div class="d-flex flex-column mt-5  align-items-center ">
-      <img class="col-4 rounded "(click)="handleHome()" type="button" src="../../../assets/Images/logo.svg">
+      <img class="col-4 rounded "(click)="handleHome()" type="button" src="assets/Images/logo.svg">
       <h2>Online Shopping</h2>
       <h4>Accedi alla tua area riservata</h4>
     </div>
