--- a/src/app/pages/registration/registration.component.html
+++ b/src/app/pages/registration/registration.component.html
@@ -1,5 +1,5 @@
 <div class="container d-flex flex-column align-items-center">
-    <img class="col-2 p-1" (click)="handleHome()" type="button" src="../../../assets/Images/logo.svg">
+    <img class="col-2 p-1" (click)="handleHome()" type="button" src="assets/Images/logo.svg">
     <h1>Crea il tuo account</h1>
     <h4>E' semplice e veloce</h4>
     
